--- a/404.html
+++ b/404.html
@@ -1,5 +1,2 @@
---
-permalink: /404.html
---
-<h1 style = "text-align: center;">Whoops!</h1>
+<h1 style = "text-align: center;">Whoops! 404, bro.</h1>
 <br><h3 style = "text-align: center;">Sorry, bro. Looks like that page, yes, that one you wanted, it, doesn't exsist. How about you go on back to <a href = "https://jaydarschool.github.io"><b>The homepage</b></a> instead?</h3>
