--- a/404.html
+++ b/404.html
@@ -1,2 +1,10 @@
+<style>
+  body {
+    font-family: "Roboto", "Radio Canada", "Open Sans", "Lato", "Montserrat", sans-serif;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    background-color: rgb(143, 201, 162);
+  }
+</style>
 <h1 style = "text-align: center;">Whoops! 404, bro.</h1>
 <br><h3 style = "text-align: center;">Sorry, bro. Looks like that page, yes, that one you wanted, it, doesn't exsist. How about you go on back to <a href = "https://jaydarschool.github.io"><b>The homepage</b></a> instead?</h3>
