--- a/old-home-archive.html
+++ b/old-home-archive.html
@@ -14,6 +14,7 @@
                     top: 10px;
                     padding: 0px 4em;
                     text-align: center;
+                    width: 100%
                 }
                 .headers {
                     color: white;
