--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     top: 10px;
     padding: 0px 4em;
     text-align: center;
-    border: dashed 4px black;
-    width: 100%;
+    border: dashed 1.75px rgb(201, 245, 243);
+    width: 98%;
   }
   #main-head {
     margin-top: 90px;
