--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <style>
-  #topbar {
-    z-index: 6;
-    position: fixed;
-    top: 10px;
-    padding: 0px 4em;
-    text-align: center;
-    width: 98%;
-  }
   #main-head {
     margin-top: 90px;
   }
 </style>
-<h2 id = "topbar">Jaydar's NEW homepage - <a href = "https://jaydarschool.github.io/old-home-archive">An archive of the old (more fleshed-out) homepage</a></h3>
+<h2 style = "z-index: 6; position: fixed; top: 10px; padding: 0px 4em; text-align: center; width: 98%;">Jaydar's NEW homepage - <a href = "https://jaydarschool.github.io/old-home-archive">An archive of the old (more fleshed-out) homepage</a></h3>
 
 <h1 id = "main-head">Hello (World)!</h1>
 
