--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
-<h2 style = "z-index: 6; position: fixed; top: 10px; padding: 0px 4em; text-align: center; width: 98%;">Jaydar's NEW homepage - <a href = "https://jaydarschool.github.io/old-home-archive">An archive of the old (more fleshed-out) homepage</a></h3>
+<h2>Jaydar's NEW homepage - <a href = "https://jaydarschool.github.io/old-home-archive">An archive of the old (more fleshed-out) homepage</a></h3>
 
-<h1 style = "padding: 90px;">Hello (World)!</h1>
+<h1>Hello (World)!</h1>
 
 <p>I'm Jaydarschool, although I usually go by the nickname "Jaydar" online, since all of my different usernames can be confusing.
 <br>I like coding stupid crap and learning about computers.</p>
