--- a/old-home-archive/news.html
+++ b/old-home-archive/news.html
@@ -39,7 +39,7 @@
     </head>
     <body>
     <div id = "topbar">
-        <h3>JAYDAR'S STUFF - <a href = "https://www.khanacademy.org/computer-programming/jaydars-games-and-stuff-jaydars-homepage/5887880569339904">homepage</a> - <a href = "https://www.khanacademy.org/computer-programming/jaydars-stuff-faq/5007799726686208">FAQ</a> - <em>News</em> - A bit about me</h3></div>
+        <h3>JAYDAR'S STUFF - <a href = "jaydarschool.github.io/old-home-archive/">homepage</a> - <a href = "jaydarschool.github.io/old-home-archive/FAQ">FAQ</a> - <em>News</em> - A bit about me</h3></div>
         
         <h1 id = "main-head">hi, this place is full of cool news</h1><!-- totally a lie rn --->
         <h4>this place talks about stuff, like the other pages</h4>
