--- a/old-home-archive/index.html
+++ b/old-home-archive/index.html
@@ -47,7 +47,7 @@
     </head>
     <body>
     <div id = "topbar">
-        <h3>JAYDAR'S STUFF - <em>homepage</em> - <a href = "jaydarschool.github.io/old-home-archive/FAQ">FAQ</a> - <a href = "jaydarschool.github.io/old-home-archive/news">News</a> - A bit about me</h3></div>
+        <h3>JAYDAR'S STUFF - <em>homepage</em> - <a href = "FAQ">FAQ</a> - <a href = "news">News</a> - A bit about me</h3></div>
         <h1 class="headers" id = "main-head"><strong>welcome to my homepage</strong></h1>
         
         <h2 class="headers">this page is stupid</h2>
