--- a/old-home-archive/news.html
+++ b/old-home-archive/news.html
@@ -39,7 +39,7 @@
     </head>
     <body>
     <div id = "topbar">
-        <h3>JAYDAR'S STUFF - <a href = "jaydarschool.github.io/old-home-archive/">homepage</a> - <a href = "FAQ">FAQ</a> - <em>News</em> - A bit about me</h3></div>
+        <h3>JAYDAR'S STUFF - <a href = "index">homepage</a> - <a href = "FAQ">FAQ</a> - <em>News</em> - A bit about me</h3></div>
         
         <h1 id = "main-head">hi, this place is full of cool news</h1><!-- totally a lie rn --->
         <h4>this place talks about stuff, like the other pages</h4>
