--- a/old-home-archive/FAQ.html
+++ b/old-home-archive/FAQ.html
@@ -40,7 +40,7 @@
     </head>
     <body>
     <div id = "topbar">
-        <h3>JAYDAR'S STUFF - <a href = "index">homepage</a> - <em>FAQ</em> - <a href = "news">News</a> - A bit about me</h3></div>
+        <h3>JAYDAR'S STUFF - <a href = "/">homepage</a> - <em>FAQ</em> - <a href = "news">News</a> - A bit about me</h3></div>
         <h2 class = "headers" id = "main-head">jaydar's stuff - FAQ (WIP)</h2>
         <br>
         <p class = "questions">Q: What is your FAQ for?</p>
