Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   and
   <li>jQuery</li>
 </ul><br>
-<p>I keep on wanting to learn Java, C++, or something like that, but I always end up watching GD Colon or doing something else stupid.</p>
+Also, I am learning Python right now! <span id = "check-it-out">(You can check out my first Python script's code <a href = "https://github.com/jaydarschool/The-PyDarb-Script" target = "_blank">here</a>!)</span>
+<br><p>I keep on wanting to learn Java, C++, or something like that, but I always end up watching GD Colon or doing something else stupid.</p>
 
 <h1>Projects</h1>
 
@@ -38,3 +39,7 @@
 </ul>
 <br>
 <h3 style = "border-top: solid 2px gray">jaydar's <b>NEW</b> homepage - <a href = "https://jaydarschool.github.io/old-home-archive/">An archive of the original (more fleshed-out, but uglier) homepage</a></h3>
+
+<script>
+  
+</script>
