--- a/experiments/confusing-webpage.html
+++ b/experiments/confusing-webpage.html
@@ -34,7 +34,7 @@
             h2 {
                 position: absolute;
                 top: 600px;
-                left: 2em;
+                text-align: center;
                 color: rgb(107, 227, 225);
             }
             
