--- a/experiments/funky-lookin-collection.html
+++ b/experiments/funky-lookin-collection.html
@@ -5,6 +5,7 @@
         <style>
             canvas {
                 border: solid 1.25px;
+		margin: 5%;
             }
             .left {
               float: left;
@@ -216,7 +217,10 @@
     var canvas3 = document.getElementById("canvas3");
    //pass the function sketch3
     var processingInstance = new Processing(canvas3, sketch3);
-   
-    
+
+   //get the last canvas
+    var canvas4 = document.getElementById("canvas4");
+   //pass the function sketch4
+    var processingInstance = new Processinf(canvas4, sketch4);
  </script>
 </html>
